[package]
name = "serde_watson"
version = "0.1.0"
edition = "2021"
authors = ["Genta Kamitani <oftn.mofumofu@gmail.com>"]
license = "Apache-2.0"
description = "Rust implementation for Wasted but Amazing Turing-incomplete Stack-based Object Notation (WATSON)"
repository = "https://github.com/genkami/watson-rs"
categories = ["encoding"]

[dependencies]
serde = "1.0.197"
watson_rs = { version = "0.1.0", path = "../watson_rs" }

[dev-dependencies]
serde_test = "1.0.137"
serde = { version = "1.0.197", features = ["derive"] }