[package]
name = "watson_rs"
version = "0.1.0"
edition = "2021"
authors = ["Genta Kamitani <oftn.mofumofu@gmail.com>"]
license = "Apache-2.0"
description = "Rust implementation for Wasted but Amazing Turing-incomplete Stack-based Object Notation (WATSON)"
repository = "https://github.com/genkami/watson-rs"
categories = ["encoding"]

[dependencies]

[dev-dependencies]
tempfile = "3"